fix(ui): clean up spacing

--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -65,6 +65,10 @@ article {
       background-color: currentColor;
     }
   }
+
+  div.content p {
+    margin-bottom: 2rem;
+  }
 }
 
 
